--- a/Sunshine/app/src/main/res/layout-small/item_next_day_weather.xml
+++ b/Sunshine/app/src/main/res/layout-small/item_next_day_weather.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="55dp"
-
+    android:layout_height="45dp"
     android:orientation="horizontal"
     android:baselineAligned="false">
     <LinearLayout
@@ -14,8 +13,9 @@
         <ImageView
             android:contentDescription="@string/icon_small"
             android:id="@+id/imv_icon_weather"
-            android:layout_width="40dp"
-            android:layout_height="40dp" />
+            android:layout_width="17dp"
+            android:layout_height="17dp"
+            tools:ignore="ContentDescription" />
 
     </LinearLayout>
     <LinearLayout
@@ -33,7 +33,8 @@
             <TextView
                 android:id="@+id/tv_date"
                 android:text="@string/tomorrow"
-                android:textStyle="bold"
+                android:textSize="12sp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
@@ -45,8 +46,10 @@
             android:layout_height="0dp">
             <TextView
                 android:id="@+id/tv_description"
-                android:textColor="#d1b6b6"
+                android:textColor="@color/secondary_text"
                 android:text="@string/clear"
+                android:textSize="12sp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
@@ -60,9 +63,12 @@
         <TextView
             android:id="@+id/tv_temperature_max"
             android:text="@string/_18"
-            android:textSize="25sp"
+            android:fontFamily="sans-serif-light"
+            android:textColor="@color/primary_text"
+            android:textSize="12sp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            tools:ignore="UnusedAttribute" />
     </LinearLayout>
     <LinearLayout
         android:gravity="center"
@@ -71,11 +77,12 @@
         android:layout_height="match_parent">
         <TextView
             android:id="@+id/tv_temperature_min"
-            android:textSize="25sp"
-            android:text=""
-            android:textColor="#d1b6b6"
+            android:textSize="12sp"
+            android:text="@string/_18"
+            android:fontFamily="sans-serif-light"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            tools:targetApi="jelly_bean" />
     </LinearLayout>
 
 </LinearLayout>
