--- a/Sunshine/app/src/main/res/layout/activity_main.xml
+++ b/Sunshine/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -18,16 +17,18 @@
             android:gravity="center|top"
             android:layout_weight="1"
             android:layout_width="match_parent"
-            android:layout_height="0dp">
+            android:layout_height="0dp"
+            tools:ignore="NestedWeights">
             <TextView
                 android:id="@+id/tv_date_current"
                 android:textColor="@android:color/white"
-                android:text="Today, July 1"
+                android:text="@string/today_july_1"
                 android:textSize="20sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
         <LinearLayout
+            android:baselineAligned="false"
             android:layout_weight="2"
             android:orientation="horizontal"
             android:layout_width="match_parent"
@@ -38,8 +39,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent">
                 <ImageView
+                    android:contentDescription="@string/icon_large"
                     android:id="@+id/imv_icon_weather_current"
-                    android:src="@drawable/icon_1000"
                     android:layout_width="96dp"
                     android:layout_height="96dp" />
             </LinearLayout>
@@ -53,9 +54,10 @@
                     android:fontFamily="sans-serif-light"
                     android:textColor="@color/primary_text"
                     android:textSize="72sp"
-                    android:text="18"
+                    android:text="@string/_18"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    tools:ignore="UnusedAttribute" />
             </LinearLayout>
 
         </LinearLayout>
@@ -63,7 +65,8 @@
             android:layout_weight="1"
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="0dp">
+            android:layout_height="0dp"
+            android:baselineAligned="false">
 
             <LinearLayout
                 android:gravity="center"
@@ -72,7 +75,7 @@
                 android:layout_height="match_parent">
                 <TextView
                     android:id="@+id/tv_description_current"
-                    android:text="Sunny"
+                    android:text="@string/sunny"
                     android:textColor="@color/secondary_text"
                     android:textSize="20sp"
                     android:layout_width="wrap_content"
@@ -86,11 +89,12 @@
                 <TextView
                     android:id="@+id/tv_temperature_min_current"
                     android:textSize="36sp"
-                    android:text="13"
+                    android:text="@string/_18"
                     android:fontFamily="sans-serif-light"
                     android:textColor="@color/secondary_text"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    tools:targetApi="jelly_bean" />
             </LinearLayout>
 
         </LinearLayout>
@@ -103,12 +107,13 @@
         android:layout_height="0dp">
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            tools:ignore="UselessParent">
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_next_day"
                 android:padding="16dp"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
             </android.support.v7.widget.RecyclerView>
         </ScrollView>
