--- a/Sunshine/app/src/main/res/menu/main.xml
+++ b/Sunshine/app/src/main/res/menu/main.xml
@@ -6,10 +6,10 @@
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:title="Settings"
+        android:title="@string/settings"
         app:showAsAction="never" />
     <item
         android:id="@+id/action_map"
-        android:title="Map Location"
+        android:title="@string/map_location"
         app:showAsAction="never" />
 </menu>
