--- a/Sunshine/app/src/main/res/layout-large/item_next_day_weather.xml
+++ b/Sunshine/app/src/main/res/layout-large/item_next_day_weather.xml
@@ -1,83 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:baselineAligned="false"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="82dp"
 
     android:orientation="horizontal">
+
     <LinearLayout
-        android:gravity="center"
-        android:layout_weight="1"
         android:layout_width="0dp"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:gravity="center">
+
         <ImageView
             android:id="@+id/imv_icon_weather"
-            android:src="@drawable/icon_1000"
             android:layout_width="60dp"
-            android:layout_height="60dp" />
+            android:layout_height="60dp"
+            android:contentDescription="@string/icon_small" />
 
     </LinearLayout>
+
     <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
         android:layout_weight="4"
-        android:layout_width="0dp"
-        android:orientation="vertical"
-        android:layout_height="match_parent">
+        android:orientation="vertical">
+
         <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:layout_marginTop="15dp"
-            android:gravity="left|center"
             android:layout_weight="1"
-            android:layout_width="match_parent"
-            android:layout_height="0dp">
+            android:gravity="start|center"
+            tools:ignore="NestedWeights">
+
             <TextView
-                android:textSize="22.5sp"
                 android:id="@+id/tv_date"
-                android:text="Tomorrow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/tomorrow"
                 android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:textSize="22.5sp" />
         </LinearLayout>
+
         <LinearLayout
-            android:layout_marginBottom="10dp"
-            android:gravity="left|center"
-            android:layout_weight="1"
             android:layout_width="match_parent"
-            android:layout_height="0dp">
+            android:layout_height="0dp"
+            android:layout_marginBottom="10dp"
+            android:layout_weight="1"
+            android:gravity="start|center">
+
             <TextView
-                android:textSize="22.5sp"
                 android:id="@+id/tv_description"
-                android:textColor="@color/secondary_text"
-                android:text="Clear"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:text="@string/clear"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textColor="@color/secondary_text"
+                android:textSize="22.5sp" />
         </LinearLayout>
 
     </LinearLayout>
+
     <LinearLayout
-        android:gravity="center"
-        android:layout_weight="1"
         android:layout_width="0dp"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:gravity="center">
+
         <TextView
             android:id="@+id/tv_temperature_max"
-            android:text="17"
-            android:fontFamily="sans-serif-light"
-            android:textColor="@color/primary_text"
-            android:textSize="42dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-light"
+            android:text="@string/_18"
+            android:textColor="@color/primary_text"
+            android:textSize="42sp"
+            tools:targetApi="jelly_bean" />
     </LinearLayout>
+
     <LinearLayout
-        android:gravity="center"
-        android:layout_weight="1"
         android:layout_width="0dp"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:gravity="center">
+
         <TextView
             android:id="@+id/tv_temperature_min"
-            android:textSize="37.5sp"
-            android:text="13"
-            android:fontFamily="sans-serif-light"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-light"
+            android:text="@string/_18"
+            android:textSize="37.5sp"
+            tools:targetApi="jelly_bean" />
     </LinearLayout>
 
 </LinearLayout>
