--- a/Sunshine/app/src/main/res/layout-v16/activity_main.xml
+++ b/Sunshine/app/src/main/res/layout-v16/activity_main.xml
@@ -5,11 +5,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="vn.tranthanhtu.sunshine.activitis.MainActivity">
-
     <LinearLayout
         android:background="@color/colorPrimary"
         android:layout_weight="1.8"
-        android:padding="24dp"
+        android:padding="16dp"
         android:layout_width="match_parent"
         android:orientation="vertical"
         android:layout_height="0dp">
@@ -21,19 +20,19 @@
             android:layout_height="0dp"
             tools:ignore="NestedWeights">
             <TextView
-                android:textSize="29sp"
                 android:id="@+id/tv_date_current"
                 android:textColor="@android:color/white"
                 android:text="@string/today_july_1"
+                android:textSize="20sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
         <LinearLayout
-            android:baselineAligned="false"
             android:layout_weight="2"
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="0dp">
+            android:layout_height="0dp"
+            android:baselineAligned="false">
             <LinearLayout
                 android:gravity="center"
                 android:layout_weight="1"
@@ -42,8 +41,8 @@
                 <ImageView
                     android:contentDescription="@string/icon_large"
                     android:id="@+id/imv_icon_weather_current"
-                    android:layout_width="144dp"
-                    android:layout_height="144dp" />
+                    android:layout_width="96dp"
+                    android:layout_height="96dp" />
             </LinearLayout>
             <LinearLayout
                 android:gravity="center"
@@ -52,22 +51,21 @@
                 android:layout_height="match_parent">
                 <TextView
                     android:id="@+id/tv_temperature_max_current"
-                    android:textSize="108sp"
-                    android:text="@string/_18"
                     android:fontFamily="sans-serif-light"
                     android:textColor="@color/primary_text"
+                    android:textSize="72sp"
+                    android:text="@string/_18"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:targetApi="jelly_bean" />
+                    android:layout_height="wrap_content" />
             </LinearLayout>
 
         </LinearLayout>
         <LinearLayout
-            android:baselineAligned="false"
             android:layout_weight="1"
             android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="0dp">
+            android:layout_height="0dp"
+            android:baselineAligned="false">
 
             <LinearLayout
                 android:gravity="center"
@@ -77,8 +75,8 @@
                 <TextView
                     android:id="@+id/tv_description_current"
                     android:text="@string/sunny"
-                    android:textSize="30sp"
                     android:textColor="@color/secondary_text"
+                    android:textSize="20sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
             </LinearLayout>
@@ -89,13 +87,12 @@
                 android:layout_height="match_parent">
                 <TextView
                     android:id="@+id/tv_temperature_min_current"
-                    android:textSize="54sp"
+                    android:textSize="36sp"
                     android:text="@string/_18"
                     android:fontFamily="sans-serif-light"
-                    android:textColor="@android:color/white"
+                    android:textColor="@color/secondary_text"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:targetApi="jelly_bean" />
+                    android:layout_height="wrap_content" />
             </LinearLayout>
 
         </LinearLayout>
@@ -112,7 +109,7 @@
             tools:ignore="UselessParent">
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rv_next_day"
-                android:padding="24dp"
+                android:padding="16dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
