--- a/Sunshine/app/src/main/res/menu/detail.xml
+++ b/Sunshine/app/src/main/res/menu/detail.xml
@@ -7,12 +7,13 @@
     <item
         android:id="@+id/action_share"
         android:icon="@drawable/abc_ic_menu_share_mtrl_alpha"
-        android:title="Share"
-        app:showAsAction="always"/>
+        android:title="@string/share"
+        app:showAsAction="ifRoom"
+        tools:ignore="PrivateResource" />
 
     <item
         android:id="@+id/action_settings_detail"
         android:orderInCategory="100"
-        android:title="Setting"
+        android:title="@string/setting"
         app:showAsAction="never" />
 </menu>
